--- a/HTML5 Front-end/css/template.css
+++ b/HTML5 Front-end/css/template.css
@@ -25,7 +25,6 @@ div#footer {
 	width:100%;
 	text-align:center;
 	color:#7f8c8d;
-	
 }
 
 
@@ -34,3 +33,8 @@ div.footer-tab {
 	padding:10px;
 }
 
+div.body {
+	top:40px;
+	position:relative;
+	padding-bottom:80px;
+}
